fix for bug 66742; r=joki, sr=sfraser; grab focusedWidget between keydown and keypress in case it was changed